--- a/arch/arm64/configs/potter_defconfig
+++ b/arch/arm64/configs/potter_defconfig
@@ -563,7 +563,10 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CPU frequency scaling drivers
 #
 # CONFIG_CPUFREQ_DT is not set
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=64
+CONFIG_INPUT_BOOST_FREQ=1401600
 
 #
 # ARM CPU frequency scaling drivers
@@ -4228,7 +4231,9 @@ CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_ICNSS is not set
 # CONFIG_MSM_CORE_CTL is not set
 CONFIG_MSM_BAM_DMUX=y
-# CONFIG_MSM_PERFORMANCE is not set
+CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
+CONFIG_MSM_PERFORMANCE_CPUFREQ_LIMITS_VOTING_ONLY=y
 # CONFIG_MSM_POWER is not set
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 # CONFIG_MSM_QBT1000 is not set
@@ -4269,6 +4274,9 @@ CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=5859
 
 #
 # DEVFREQ Drivers
